--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>https://github.com/Kusumagali
   <title>Kusuma | Portfolio</title>
   <style>
     body { font-family: Arial; background: #f0f8ff; padding: 20px; color: #333; }
@@ -35,14 +35,14 @@
 
   <div class="section">
     <h3>Resume</h3>
-    <a href="https://your-resume-link.com" target="_blank">Download Resume</a>
+    <a href="https://drive.google.com/file/d/1dCNfnSlfIDdodFimuWJAnfzx7XzHppew/view?usp=sharing" target="_blank">Download Resume</a>
   </div>
 
   <div class="section">
     <h3>Contact</h3>
-    <p>Email: your.email@example.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+    <p>galikusuma1@gmail.com</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/kusuma-gali-b30b19238?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BMwD5OthkRamRGSWhzX1tcw%3D%3D" target="_blank">linkedin.com/in/yourprofile</a></p>
+    <p>GitHub: <a href="https://github.com/Kusumagali" target="_blank">github.com/yourusername</a></p>
   </div>
 </body>
 </html>
