--- a/index.html
+++ b/index.html
@@ -1,30 +1,67 @@
 <!DOCTYPE html>
-<html>
-<head>https://github.com/Kusumagali
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
   <title>Kusuma | Portfolio</title>
   <style>
-    body { font-family: Arial; background: #f0f8ff; padding: 20px; color: #333; }
-    h1 { color: #004080; }
-    h2 { color: #0066cc; }
-    .section { margin-top: 30px; }
-    a { color: #0088cc; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f9fbfd;
+      color: #333;
+      margin: 0;
+      padding: 40px;
+      line-height: 1.6;
+    }
+    h1, h2, h3 {
+      color: #003366;
+    }
+    h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+    h2 {
+      font-size: 24px;
+      margin-top: 0;
+      color: #00509e;
+    }
+    .section {
+      background: #ffffff;
+      padding: 20px;
+      margin: 20px 0;
+      border-left: 5px solid #00509e;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    }
+    ul {
+      padding-left: 20px;
+    }
+    a {
+      color: #0056b3;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .contact p {
+      margin: 5px 0;
+    }
   </style>
 </head>
 <body>
+
   <h1>Hello, I'm Kusuma 👋</h1>
-  <h2>Aspiring Software Developer</h2>
+  <h2>Aspiring Software Developer & ECE Final-Year Student</h2>
 
   <div class="section">
     <h3>About Me</h3>
-    <p>I'm a final-year ECE student with experience in Python, C, AWS, HTML, CSS, and cloud projects. Passionate about problem-solving and learning new technologies.</p>
+    <p>I'm a final-year Electronics and Communication Engineering (ECE) student with strong interest in software development. I’ve worked on cloud-based projects and enjoy solving real-world problems using Python, C, HTML, and AWS.</p>
   </div>
 
   <div class="section">
     <h3>Projects</h3>
     <ul>
-      <li><strong>Mouse Cursor Control:</strong> Used color object detection to control the cursor.</li>
-      <li><strong>Scramble Word Game:</strong> A Python-based word puzzle game.</li>
-      <li><strong>Website Redesign (Internship):</strong> Collaborated using AWS tools to improve UI and performance.</li>
+      <li><strong>Mouse Cursor Control:</strong> Used color object detection to control the mouse pointer.</li>
+      <li><strong>Scramble Word Game:</strong> A fun Python-based word puzzle project.</li>
+      <li><strong>Website Redesign (Internship):</strong> Used AWS tools to revamp UI and optimize performance.</li>
     </ul>
   </div>
 
@@ -35,14 +72,16 @@
 
   <div class="section">
     <h3>Resume</h3>
-    <a href="https://drive.google.com/file/d/1dCNfnSlfIDdodFimuWJAnfzx7XzHppew/view?usp=sharing" target="_blank">Download Resume</a>
+    <a href="https://drive.google.com/file/d/1dCNfnSlfIDdodFimuWJAnfzx7XzHppew/view?usp=sharing" target="_blank">📄 Download Resume</a>
   </div>
 
-  <div class="section">
-    <h3>+91 9063568108</h3>
-    <p>galikusuma1@gmail.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/kusuma-gali-b30b19238?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BMwD5OthkRamRGSWhzX1tcw%3D%3D" target="_blank">linkedin.com/in/yourprofile</a></p>
-    <p>GitHub: <a href="https://github.com/Kusumagali" target="_blank">github.com/yourusername</a></p>
+  <div class="section contact">
+    <h3>Contact</h3>
+    <p>📞 +91 9063568108</p>
+    <p>✉️ galikusuma1@gmail.com</p>
+    <p>🔗 <a href="https://www.linkedin.com/in/kusuma-gali-b30b19238" target="_blank">LinkedIn</a></p>
+    <p>💻 <a href="https://github.com/Kusumagali" target="_blank">GitHub</a></p>
   </div>
+
 </body>
 </html>
