--- a/index.html
+++ b/index.html
@@ -59,15 +59,30 @@
   <div class="section">
     <h3>Projects</h3>
     <ul>
-      <li><strong>Mouse Cursor Control:</strong> Used color object detection to control the mouse pointer.</li>
-      <li><strong>Scramble Word Game:</strong> A fun Python-based word puzzle project.</li>
-      <li><strong>Website Redesign (Internship):</strong> Used AWS tools to revamp UI and optimize performance.</li>
+      <li>
+        <strong>Mouse Cursor Control:</strong>  
+        <p>Developed a system that uses color object detection through a webcam to control mouse movement and clicks, improving accessibility and hands-free interaction.</p>
+      </li>
+      <li>
+        <strong>Scramble Word Game:</strong>  
+        <p>A Python-based puzzle game that challenges users to unscramble words. Built using basic Python logic and GUI libraries for fun and educational purposes.</p>
+      </li>
+      <li>
+        <strong>Website Redesign (Internship):</strong>  
+        <p>Worked in a team to revamp a company website using AWS tools. Focused on UI improvements and backend optimization that led to a 20% boost in user engagement.</p>
+      </li>
     </ul>
   </div>
 
   <div class="section">
     <h3>Skills</h3>
     <p>Python, C, HTML, CSS, AWS, SQL, Git, Kubernetes (learning)</p>
+  </div>
+
+  <div class="section">
+    <h3>LeetCode Profile</h3>
+    <a href="https://leetcode.com/u/kusuma_gali/" target="_blank">📘 View My LeetCode Practice</a>
+    
   </div>
 
   <div class="section">
